<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="ST_XV03_PerformanceDiagnostics" Id="{766f2e86-b41d-0996-14cf-914f2aa113b4}">
    <Declaration><![CDATA[TYPE ST_XV03_PerformanceDiagnostics :
STRUCT
	LOGIC_VOLTAGE_INCORRECT 	: BOOL;
	ACTUATOR_VOLTAGE_OVERRANGE	: BOOL;
	OPEN_LOAD_AT_VALVE_COIL		: BOOL;
	SHORT_CIRCUIT_AT_VALVE_COIL	: BOOL;
	HARDWARE_ERROR				: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>